blog-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: blog-app1
   labels:
      app: blog-app1 
spec:
  selector:
      matchLabels:
        app: blog-app1
  template:
      metadata:
        name: blog-app1
        labels:
          app: blog-app1
      spec:
        containers:
          - name: blog-app1
            image: imed1/blog-app
            ports:
              - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: blog-service1
spec:
  selector:
    app: blog-app1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
