test.yml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: nginx-dep1
   labels:
     app: nginx1
spec:
   replicas: 1
   selector:
     matchLabels:
       app: nginx1
   strategy:
     type: RollingUpdate
     rollingUpdate:
       maxSurge: 2
       maxUnavailable: 0
   template:
     metadata:
       labels:
         app: nginx1
     spec:
       containers:
         - name: nginx-container1
           image: nginx
           ports:
             - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
   name: nginx-service
spec:
   selector:
     app: nginx1 
   type: LoadBalancer 
   ports:
     - protocol: TCP
       port: 80
       targetPort: 80
       nodePort: 31002
