ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-rules1
  
spec:
  rules:
   - host: monblog.com
     http:
       paths:
        - backend:
           serviceName: blog-service1
           servicePort: 80
